# This specifies which new Cargo.toml features are enabled.
# cargo-features = ["strip"]

[package]
authors = ["Paul Saunders <pms1969@gmail.com>"]
name = "concourse-s3-no-check-resource"
version = "0.1.0"
edition = "2021"
keywords = ["concourse", "resource", "s3"]
license = "LICENSE"
readme = "README.md"
repository = "local"

[[bin]]
name = "resource"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
concourse-resource = "0.3.0"
serde = "1.0.145"
serde_json = "1.0.85"
serde_regex = "1.1.0"
aws-config = "0.49.0"
aws-sdk-s3 = "0.19.0"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
glob = "0.3.0"
regex = "1.6.0"
bytes = "1.2.1"

[dependencies.serde_with]
features = ["json"]
version = "2.0.1"

[profile.release]
codegen-units = 1 # to allow for maximum size reduction optimisations
lto = true        # elable Link Time Optimisations
opt-level = "z"   # optimise for size
# strip = true # all symbols
